// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots CheckBox Default 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Default
        </h1>
        
        <span
          className="story-subtitle"
          style={Object {}}
        >
          <div>
            <p>
              Checkbox needs only label and onChange by default.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        className="chapter-header"
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        className="section-container"
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          className="section-header"
          style={Object {}}
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          className="section-component-container"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <label
            className="Checkbox__Label-sc-1x6twh3-5 jCEmqK"
          >
            <input
              checked={false}
              className="Checkbox__Input-sc-1x6twh3-4 dokhnj"
              disabled={false}
              onChange={[Function]}
              type="checkbox"
            />
            <div
              className="Checkbox__IconContainer-sc-1x6twh3-0 gpteLp"
            >
              <svg
                className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.926 18.652L4 13.725l1.767-1.768 3.074 3.074L17.959 5l1.849 1.682z"
                />
              </svg>
            </div>
            <div
              className="Checkbox__TextContainer-sc-1x6twh3-1 ePDkGQ"
            >
              <span
                className="Checkbox__LabelText-sc-1x6twh3-3 kNgPJv"
              >
                Label
              </span>
            </div>
          </label>
        </div>
        <div>
          <div>
            <div>
              
              <div
                className="section-subsection"
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  className="section-subsection-title"
                >
                  Source
                </h4>
                <pre
                  className="css-4akams"
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Checkbox
                      </span>
                      <span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            label
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                Label
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            checked
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#a11",
                                  }
                                }
                              >
                                false
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        <span>
                           
                          <span
                            style={Object {}}
                          >
                            onChange
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                changed
                              </span>
                              }
                            </span>
                          </span>
                           
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                  </div>
                  <button
                    className="css-py33tc"
                    onClick={[Function]}
                  >
                    <div
                      className="css-kv47nt"
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": 6,
                          }
                        }
                      >
                        Copied!
                      </div>
                      <div>
                        Copy
                      </div>
                    </div>
                  </button>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots CheckBox Playground 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          Playground
        </h1>
        
        <span
          className="story-subtitle"
          style={Object {}}
        >
          <div>
            <p>
              Playground of Checkbox
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        className="chapter-header"
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        className="section-container"
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          className="section-header"
          style={Object {}}
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          className="section-component-container"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <label
            className="Checkbox__Label-sc-1x6twh3-5 ccpUEG"
          >
            <input
              checked={true}
              className="Checkbox__Input-sc-1x6twh3-4 dokhnj"
              data-test="test"
              disabled={true}
              name="name"
              onChange={[Function]}
              type="checkbox"
              value="value"
            />
            <div
              className="Checkbox__IconContainer-sc-1x6twh3-0 gpteLp"
            >
              <svg
                className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.926 18.652L4 13.725l1.767-1.768 3.074 3.074L17.959 5l1.849 1.682z"
                />
              </svg>
            </div>
            <div
              className="Checkbox__TextContainer-sc-1x6twh3-1 ePDkGQ"
            >
              <span
                className="Checkbox__LabelText-sc-1x6twh3-3 kNgPJv"
              >
                Label
              </span>
              <span
                className="Checkbox__Info-sc-1x6twh3-2 EKDFf"
              >
                Additional information for this choice
              </span>
            </div>
          </label>
        </div>
        <div>
          <div>
            <div>
              
              <div
                className="section-subsection"
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  className="section-subsection-title"
                >
                  Source
                </h4>
                <pre
                  className="css-4akams"
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Checkbox
                      </span>
                      <span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            label
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                Label
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            value
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                value
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            checked
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            disabled
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            name
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                name
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            hasError
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#a11",
                                  }
                                }
                              >
                                false
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            dataTest
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                test
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            info
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                Additional information for this choice
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            onChange
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                changed
                              </span>
                              }
                            </span>
                          </span>
                          <br />
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                  </div>
                  <button
                    className="css-py33tc"
                    onClick={[Function]}
                  >
                    <div
                      className="css-kv47nt"
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": 6,
                          }
                        }
                      >
                        Copied!
                      </div>
                      <div>
                        Copy
                      </div>
                    </div>
                  </button>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots CheckBox RTL 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          RTL
        </h1>
        
        <span
          className="story-subtitle"
          style={Object {}}
        >
          <div>
            <p>
              This is a preview of this component in RTL setup.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        className="chapter-header"
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        className="section-container"
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          className="section-header"
          style={Object {}}
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          className="section-component-container"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <label
            className="Checkbox__Label-sc-1x6twh3-5 jCEmqK"
          >
            <input
              checked={true}
              className="Checkbox__Input-sc-1x6twh3-4 dokhnj"
              disabled={false}
              onChange={[Function]}
              type="checkbox"
              value="value"
            />
            <div
              className="Checkbox__IconContainer-sc-1x6twh3-0 gpteLp"
            >
              <svg
                className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.926 18.652L4 13.725l1.767-1.768 3.074 3.074L17.959 5l1.849 1.682z"
                />
              </svg>
            </div>
            <div
              className="Checkbox__TextContainer-sc-1x6twh3-1 lgBZYI"
            >
              <span
                className="Checkbox__LabelText-sc-1x6twh3-3 kNgPJv"
              >
                <p
                  className="Text__StyledText-sc-19qtt4y-0 huZevl"
                >
                  I instruct Kiwi.com to cancel this booking under the herein specified conditions and to process a refund in accordance with Kiwi.com’ 
                  <a
                    className="TextLink__StyledTextLink-sc-1bvlje4-1 gjnkGq"
                    rel=""
                  >
                    Terms and Conditions
                  </a>
                  .
                </p>
              </span>
            </div>
          </label>
        </div>
        <div>
          <div>
            <div>
              
              <div
                className="section-subsection"
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  className="section-subsection-title"
                >
                  Source
                </h4>
                <pre
                  className="css-4akams"
                >
                  <div>
                    <div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;
                          RenderInRtl
                        </span>
                        <span />
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 33,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;
                          Checkbox
                        </span>
                        <span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              label
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  &lt;Text /&gt;
                                </span>
                                }
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              checked
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              value
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                "
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  value
                                </span>
                                "
                              </span>
                            </span>
                          </span>
                          <span>
                            <span>
                              <br />
                                
                            </span>
                            <span
                              style={Object {}}
                            >
                              onChange
                            </span>
                            <span>
                              =
                              <span
                                style={Object {}}
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#170",
                                    }
                                  }
                                >
                                  changed
                                </span>
                                }
                              </span>
                            </span>
                            <br />
                          </span>
                        </span>
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          /&gt;
                        </span>
                      </div>
                      <div
                        style={
                          Object {
                            "paddingLeft": 18,
                            "paddingRight": 3,
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#777",
                            }
                          }
                        >
                          &lt;/
                          RenderInRtl
                          &gt;
                        </span>
                      </div>
                    </div>
                  </div>
                  <button
                    className="css-py33tc"
                    onClick={[Function]}
                  >
                    <div
                      className="css-kv47nt"
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": 6,
                          }
                        }
                      >
                        Copied!
                      </div>
                      <div>
                        Copy
                      </div>
                    </div>
                  </button>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots CheckBox With TextLink in label 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          With TextLink in label
        </h1>
        
        <span
          className="story-subtitle"
          style={Object {}}
        >
          <div>
            <p>
              Additionally you can add info to this component.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        className="chapter-header"
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        className="section-container"
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          className="section-header"
          style={Object {}}
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          className="section-component-container"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <label
            className="Checkbox__Label-sc-1x6twh3-5 jCEmqK"
          >
            <input
              checked={true}
              className="Checkbox__Input-sc-1x6twh3-4 dokhnj"
              disabled={false}
              onChange={[Function]}
              type="checkbox"
              value="value"
            />
            <div
              className="Checkbox__IconContainer-sc-1x6twh3-0 gpteLp"
            >
              <svg
                className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.926 18.652L4 13.725l1.767-1.768 3.074 3.074L17.959 5l1.849 1.682z"
                />
              </svg>
            </div>
            <div
              className="Checkbox__TextContainer-sc-1x6twh3-1 ePDkGQ"
            >
              <span
                className="Checkbox__LabelText-sc-1x6twh3-3 kNgPJv"
              >
                <p
                  className="Text__StyledText-sc-19qtt4y-0 dJNjRc"
                >
                  I instruct Kiwi.com to cancel this booking under the herein specified conditions and to process a refund in accordance with Kiwi.com’ 
                  <a
                    className="TextLink__StyledTextLink-sc-1bvlje4-1 gjnkGq"
                    rel=""
                  >
                    Terms and Conditions
                  </a>
                  .
                </p>
              </span>
            </div>
          </label>
        </div>
        <div>
          <div>
            <div>
              
              <div
                className="section-subsection"
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  className="section-subsection-title"
                >
                  Source
                </h4>
                <pre
                  className="css-4akams"
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Checkbox
                      </span>
                      <span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            label
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                &lt;Text /&gt;
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            checked
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            value
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                value
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            onChange
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                changed
                              </span>
                              }
                            </span>
                          </span>
                          <br />
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                  </div>
                  <button
                    className="css-py33tc"
                    onClick={[Function]}
                  >
                    <div
                      className="css-kv47nt"
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": 6,
                          }
                        }
                      >
                        Copied!
                      </div>
                      <div>
                        Copy
                      </div>
                    </div>
                  </button>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots CheckBox With help 1`] = `
<div
  style={
    Object {
      "padding": "20px",
    }
  }
>
  <div
    className="story"
    style={
      Object {
        "WebkitFontSmoothing": "antialiased",
        "color": "#444",
        "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
      }
    }
  >
    <div
      className="story-header"
      style={
        Object {
          "color": "#565d6b",
          "fontSize": 14,
          "lineHeight": 1.5,
        }
      }
    >
      <div>
        <h1
          className="story-title"
          style={
            Object {
              "color": "#363a45",
              "fontSize": 36,
              "marginBottom": 10,
            }
          }
        >
          With help
        </h1>
        
        <span
          className="story-subtitle"
          style={Object {}}
        >
          <div>
            <p>
              Additionally you can add info to this component.
            </p>
          </div>
        </span>
      </div>
    </div>
    <div>
      <div
        className="chapter-header"
        style={
          Object {
            "marginBottom": 60,
          }
        }
      >
        <div>
          
          
          
          
        </div>
      </div>
      <div
        className="section-container"
        style={
          Object {
            "marginBottom": 100,
          }
        }
      >
        <div
          className="section-header"
          style={Object {}}
        >
          <div>
            <div>
              
              
            </div>
          </div>
        </div>
        <div
          className="section-component-container"
          style={
            Object {
              "marginBottom": 60,
            }
          }
        >
          <label
            className="Checkbox__Label-sc-1x6twh3-5 jCEmqK"
          >
            <input
              checked={false}
              className="Checkbox__Input-sc-1x6twh3-4 dokhnj"
              disabled={false}
              onChange={[Function]}
              type="checkbox"
              value="value"
            />
            <div
              className="Checkbox__IconContainer-sc-1x6twh3-0 gpteLp"
            >
              <svg
                className="Icon__StyledIcon-sc-1pnzn3g-0 geWqaO"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 24 24"
              >
                <path
                  d="M8.926 18.652L4 13.725l1.767-1.768 3.074 3.074L17.959 5l1.849 1.682z"
                />
              </svg>
            </div>
            <div
              className="Checkbox__TextContainer-sc-1x6twh3-1 ePDkGQ"
            >
              <span
                className="Checkbox__LabelText-sc-1x6twh3-3 kNgPJv"
              >
                Label
              </span>
              <span
                className="Checkbox__Info-sc-1x6twh3-2 EKDFf"
              >
                Additional information to this choice
              </span>
            </div>
          </label>
        </div>
        <div>
          <div>
            <div>
              
              <div
                className="section-subsection"
                style={
                  Object {
                    "marginBottom": 60,
                  }
                }
              >
                <h4
                  className="section-subsection-title"
                >
                  Source
                </h4>
                <pre
                  className="css-4akams"
                >
                  <div>
                    <div
                      style={
                        Object {
                          "paddingLeft": 18,
                          "paddingRight": 3,
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        &lt;
                        Checkbox
                      </span>
                      <span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            label
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                Label
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            value
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                value
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            info
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              "
                              <span
                                style={
                                  Object {
                                    "color": "#22a",
                                    "wordBreak": "break-word",
                                  }
                                }
                              >
                                Additional information to this choice
                              </span>
                              "
                            </span>
                          </span>
                        </span>
                        <span>
                          <span>
                            <br />
                              
                          </span>
                          <span
                            style={Object {}}
                          >
                            onChange
                          </span>
                          <span>
                            =
                            <span
                              style={Object {}}
                            >
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                changed
                              </span>
                              }
                            </span>
                          </span>
                          <br />
                        </span>
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#777",
                          }
                        }
                      >
                        /&gt;
                      </span>
                    </div>
                  </div>
                  <button
                    className="css-py33tc"
                    onClick={[Function]}
                  >
                    <div
                      className="css-kv47nt"
                    >
                      <div
                        style={
                          Object {
                            "marginBottom": 6,
                          }
                        }
                      >
                        Copied!
                      </div>
                      <div>
                        Copy
                      </div>
                    </div>
                  </button>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
